# Escr0WX

./: FUNDING.json  README.md
Backend/: .env.example  .eslintrc.js  .gitignore  INTEGRATION_COMPLETE.md  README.md  package-lock.json  package.json  tsconfig.json
Backend/src/: index.ts  simple-index.ts
Backend/src/blockchain/: BlockchainService.ts  ContractABI.ts  index.ts
Backend/src/config/: index.ts
Backend/src/controllers/: AuthController.ts  DashboardController.ts  ListingController.ts  index.ts
Backend/src/middleware/: auth.ts  errorHandler.ts  index.ts  rateLimit.ts  security.ts
Contracts/: .env.example  .gitignore  CONTRACTS.md  DEPLOYMENT_ORDER.md  EscrowX.sol  README.md  README_FOUNDRY.md  REMIX_DEPLOYMENT.md  foundry.toml  hardhat.config.js  package.json
Contracts/contracts/: EVVMManager.sol  MockVerifier.sol  Treasury.sol  ZKVerifierAdapter.sol
Contracts/script/: DeployEscrowX.s.sol
Contracts/scripts/: deploy.js
Contracts/test/: EscrowX.test.js  MockERC20.sol
Frontend/: .env  .env.example  DEPLOYMENT.md  PRODUCTION_READY.md  REAL_TESTING_GUIDE.md  check-production.cjs  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Frontend/src/: App.tsx  index.css
Solana/: .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT_FIX.md  INTEGRATION_GUIDE.md  PLAYGROUND_TESTING.md  README.md  SOLANA_TESTING_GUIDE.md  package.json
Solana/programs/escrowx-audit/: Cargo.toml
Solana/programs/escrowx-audit/src/: lib.rs
Solana/scripts/: client-example.ts  deploy.sh  playground-client.js  test-playground.js
(+106 files in other folders)
