[package]
name = "escrowx-audit"
version = "0.1.0"
description = "EscrowX Solana Audit Ledger - Append-only cross-chain audit log"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "escrowx_audit"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"